# flask-simple-site

./: Procfile  app.py  pyproject.toml  run.py
templates/: base.html
tests/: test_app.py
