[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Cristian Sousa <eng.cristiansousa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
blue = "^0.8.0"
httpie = "^3.1.0"
prospector = "^1.7.7"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
